style: dark mode code block fix

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -117,8 +117,8 @@ li {
     line-height: 1.5;
     margin: 0 2px;
     padding: 0 5px;
-    border: 1px solid lighten($black, 90);
-    background-color: lighten($black, 95);
+    border: 1px solid var(--level-3-color);
+    background-color: var(--level-2-color);
     @include rounded(3px);
   }
 }
